--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,30 @@ alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.11.0
 asyncer==0.0.8
+asyncpg==0.30.0
 attrs==25.3.0
+Authlib==1.6.4
 backoff==2.2.1
 cachetools==6.2.0
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
 cloudpickle==3.1.1
 colorlog==6.9.0
+cryptography==46.0.1
+cyclopts==3.24.0
 diskcache==5.6.3
 distro==1.9.0
+dnspython==2.8.0
+docstring_parser==0.17.0
+docutils==0.22.2
+dotenv==0.9.9
 dspy==3.0.3
+email-validator==2.3.0
+exceptiongroup==1.3.0
+fastapi==0.118.0
+fastmcp==2.12.4
 fastuuid==0.12.0
 filelock==3.19.1
 frozenlist==1.7.0
@@ -25,42 +38,70 @@ h11==0.16.0
 hf-xet==1.1.10
 httpcore==1.0.9
 httpx==0.28.1
+httpx-sse==0.4.1
 huggingface-hub==0.35.1
 idna==3.10
 importlib_metadata==8.7.0
+isodate==0.7.2
 Jinja2==3.1.6
 jiter==0.11.0
 joblib==1.5.2
 json_repair==0.51.0
 jsonschema==4.25.1
+jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
+lazy-object-proxy==1.12.0
 litellm==1.77.4
 madoka==0.7.1
 magicattr==0.1.6
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+mcp==1.15.0
 mdurl==0.1.2
+memmachine @ git+https://github.com/edwinyyyu/MemMachine.git@7fcf5ef1a75d90e09029986e7e1aa14a2f389317
+more-itertools==10.8.0
 multidict==6.6.4
+neo4j==6.0.0
+nltk==3.9.1
 numpy==2.3.3
 openai==1.109.1
+openapi-core==0.19.5
+openapi-pydantic==0.5.1
+openapi-schema-validator==0.6.3
+openapi-spec-validator==0.7.2
 optuna==4.5.0
 orjson==3.11.3
 packaging==25.0
+parse==1.20.2
+pathable==0.4.4
+pgvector==0.4.1
 pondpond==1.4.1
+prometheus_client==0.23.1
 propcache==0.3.2
+pycparser==2.23
 pydantic==2.11.9
+pydantic-settings==2.11.0
 pydantic_core==2.33.2
 Pygments==2.19.2
+pyperclip==1.11.0
 python-dotenv==1.1.1
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
+rank-bm25==0.2.2
 referencing==0.36.2
 regex==2025.9.18
 requests==2.32.5
+rfc3339-validator==0.1.4
 rich==14.1.0
+rich-rst==1.3.1
 rpds-py==0.27.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+sse-starlette==3.0.2
+starlette==0.48.0
 tenacity==9.1.2
 tiktoken==0.11.0
 tokenizers==0.22.1
@@ -68,6 +109,8 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+uvicorn==0.37.0
+Werkzeug==3.1.1
 xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
